// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`function\` option matches snapshot for \`[path].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "0.async.js.super-compressed.gz?ver=aafa0e2b0a1b3368379e",
    117,
  ],
  Array [
    "0.async.js?ver=aafa0e2b0a1b3368379e",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.super-compressed.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.super-compressed.gz",
    393,
  ],
  Array [
    "js.js.super-compressed.gz?var=aafa0e2b0a1b3368379e",
    2801,
  ],
  Array [
    "js.js?var=aafa0e2b0a1b3368379e",
    10256,
  ],
]
`;

exports[`when applied with \`function\` option matches snapshot for \`[path].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`when applied with \`function\` option matches snapshot for \`[path].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`when applied with \`function\` option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "0.async.js.gz?ver=6f8469d400ea51244fa3",
    141,
  ],
  Array [
    "0.async.js?ver=6f8469d400ea51244fa3",
    156,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.js.gz?var=6f8469d400ea51244fa3",
    2802,
  ],
  Array [
    "js.js?var=6f8469d400ea51244fa3",
    10256,
  ],
]
`;

exports[`when applied with \`function\` option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`when applied with \`function\` option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;
